--- a/PrototypeQ.Api/PrototypeQ.Api.csproj
+++ b/PrototypeQ.Api/PrototypeQ.Api.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
