--- a/PrototypeQ.Services/PrototypeQ.Services.csproj
+++ b/PrototypeQ.Services/PrototypeQ.Services.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PrototypeQ.DataModel\PrototypeQ.DataModel.csproj" />
+  </ItemGroup>
+
 </Project>
