--- a/PrototypeQ.Api/PrototypeQ.Api.csproj
+++ b/PrototypeQ.Api/PrototypeQ.Api.csproj
@@ -11,10 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.DataAccess.csproj" />
+    <ProjectReference Include="..\PrototypeQ.Services\PrototypeQ.Services.csproj" />
   </ItemGroup>
 
 </Project>
