Update project architecture

--- a/PrototypeQ.Services/PrototypeQ.Services.csproj
+++ b/PrototypeQ.Services/PrototypeQ.Services.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.DataAccess.csproj" />
-    <ProjectReference Include="..\PrototypeQ.DataModel\PrototypeQ.DataModel.csproj" />
+    <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.Data.csproj" />
   </ItemGroup>
 
 </Project>
