--- a/PrototypeQ.Api/PrototypeQ.Api.csproj
+++ b/PrototypeQ.Api/PrototypeQ.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.DataAccess.csproj" />
+    <ProjectReference Include="..\PrototypeQ.DataAccess\PrototypeQ.Data.csproj" />
     <ProjectReference Include="..\PrototypeQ.Services\PrototypeQ.Services.csproj" />
   </ItemGroup>
 
